--- a/templates/upload.html
+++ b/templates/upload.html
@@ -2,14 +2,30 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Upload</title>
+<!-- CSS only -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 </head>
-<body>
-<h1>File Uploader</h1>
+
+<body class="bg-secondary">
+
+<div>
+<p class="text-center bg-light h2 p-1">File Uploader</p>
+
+<div class="card bg-primary" style="margin-left: 300px; margin-right: 300px;">
+<div class="p-3 mb-2 text-white text-center card-body">
 <form id="upload-form" action="{{ url_for('upload') }}" method="POST" enctype="multipart/form-data">
 <input id="file-picker" type="file" name="file" accept="image/*" >
     <input type="submit" value="Upload!" id="upload-button">
     </form>
+</div>
+</div>
+
+</div>
 
 </body>
+
+
 </html>
